<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity">

    <ImageView
        android:id="@+id/opening_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/std_16"
        android:layout_marginEnd="@dimen/std_16"
        android:layout_marginTop="@dimen/std_16"
        android:contentDescription="@string/create_new"
        android:src="@mipmap/opening"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <ImageView
            android:id="@+id/userProfilePicture"
            android:contentDescription="@string/profile_picture"
            android:layout_width="@dimen/std_100"
            android:layout_height="@dimen/std_100"
            android:layout_gravity="center"
            android:background="@mipmap/user"/>
        <TextView
            android:id="@+id/userGoogleAccName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/std_16"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/welcome_name"/>
        <TextView
            android:id="@+id/userGoogleEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/welcome_email"/>
        <Button
            android:id="@+id/nextInWelcomeButton"
            android:layout_width="@dimen/std_120"
            android:layout_height="@dimen/std_60"
            android:layout_marginTop="18dp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/ubuntu_font"
            android:text="@string/next"/>
    </LinearLayout>
    <Button
        android:id="@+id/signOut"
        android:layout_width="@dimen/std_120"
        android:layout_height="@dimen/std_60"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/ubuntu_font"
        android:text="@string/welcome_sign_out"/>

</RelativeLayout>