<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CollectMemberDataActivity">

    <TextView
        android:id="@+id/availMemDataText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_32"
        android:layout_marginStart="@dimen/std_16"
        android:layout_marginEnd="@dimen/std_16"
        android:textSize="16sp"
        android:textColor="@color/dark_grey"
        android:fontFamily="@font/ubuntu_font"
        android:text="@string/existedMemData"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/std_16"
        android:layout_marginEnd="@dimen/std_16"
        android:layout_marginTop="@dimen/std_8">
        <TextView
            android:id="@+id/googleName"
            android:layout_width="@dimen/std_100"
            android:layout_height="25dp"
            android:layout_marginStart="@dimen/std_5"
            android:layout_marginEnd="@dimen/std_8"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:textColor="@color/dark_grey"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/ubuntu_font"
            android:text="@string/GoogleName"/>
        <TextView
            android:id="@+id/googleNameInput"
            android:layout_width="@dimen/std_250"
            android:layout_height="25dp"
            android:layout_marginStart="@dimen/std_2"
            android:layout_marginEnd="@dimen/std_16"
            android:textSize="16sp"
            android:textColor="@color/dark_grey"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/ubuntu_font"
            android:hint="@string/GoogleNameHint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/std_16"
        android:layout_marginEnd="@dimen/std_16"
        android:layout_marginTop="@dimen/std_8">
        <TextView
            android:id="@+id/googleEmail"
            android:layout_width="@dimen/std_100"
            android:layout_height="25dp"
            android:layout_marginStart="@dimen/std_5"
            android:layout_marginEnd="@dimen/std_8"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:textColor="@color/dark_grey"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/ubuntu_font"
            android:text="@string/GoogleEmail"/>
        <TextView
            android:id="@+id/googleEmailInput"
            android:layout_width="@dimen/std_250"
            android:layout_height="25dp"
            android:layout_marginStart="@dimen/std_2"
            android:layout_marginEnd="@dimen/std_16"
            android:textSize="16sp"
            android:textColor="@color/dark_grey"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/ubuntu_font"
            android:hint="@string/GoogleEmailHint"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lines"
        android:layout_marginTop="@dimen/std_8"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/phoneMemberDataText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_32"
        android:layout_marginStart="@dimen/std_16"
        android:layout_marginEnd="@dimen/std_16"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ubuntu_font"
        android:text="@string/PhonePlease"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/std_16"
        android:layout_marginEnd="@dimen/std_16"
        android:layout_marginTop="@dimen/std_8">
        <TextView
            android:id="@+id/phoneDataText"
            android:layout_width="@dimen/std_100"
            android:layout_height="25dp"
            android:layout_marginStart="@dimen/std_5"
            android:layout_marginEnd="@dimen/std_8"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:textColor="@color/dark_grey"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/ubuntu_font"
            android:text="@string/PhoneNumber"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <EditText
                android:id="@+id/phoneDataInput"
                android:layout_width="@dimen/std_250"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/std_2"
                android:layout_marginEnd="@dimen/std_16"
                android:fontFamily="@font/ubuntu_font"
                android:inputType="phone"
                android:textSize="16sp"
                android:focusable="true"
                android:hint="@string/sample_phone"
                android:background="@android:drawable/editbox_background"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/dataConfirmText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_32"
        android:layout_marginStart="@dimen/std_16"
        android:layout_marginEnd="@dimen/std_16"
        android:textSize="14sp"
        android:textColor="@color/dark_grey"
        android:fontFamily="@font/ubuntu_font"
        android:text="@string/dataConfirmation"/>

    <Button
        android:id="@+id/nextToGroupListFromScan"
        android:layout_width="@dimen/std_100"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_24"
        android:layout_marginStart="@dimen/std_16"
        android:layout_marginEnd="@dimen/std_16"
        android:layout_gravity="center"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ubuntu_font"
        style="?android:attr/buttonBarButtonStyle"
        android:background="@android:drawable/btn_default"/>

</LinearLayout>