<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="?android:attr/buttonBarStyle"
    tools:context=".activities.CreateNewGroupActivity">

    <TextView
        android:id="@+id/createGroupText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/begin"
        android:layout_marginTop="@dimen/std_40"
        android:layout_marginStart="@dimen/std_16"
        android:layout_marginEnd="@dimen/std_16"
        android:fontFamily="@font/ubuntu_font"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/createGroupText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_option"
        android:layout_marginTop="@dimen/std_40"
        android:fontFamily="@font/ubuntu_font"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/std_16"
        android:layout_marginEnd="@dimen/std_16"
        android:layout_marginTop="@dimen/std_16"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/createNew"
            android:layout_width="@dimen/std_170"
            android:layout_height="@dimen/std_70"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/ubuntu_font"
            android:textSize="16sp"
            android:text="@string/create_new"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@android:drawable/btn_default"/>
        <Button
            android:id="@+id/joinFamily"
            android:layout_width="@dimen/std_170"
            android:layout_height="@dimen/std_70"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/ubuntu_font"
            android:textSize="16sp"
            android:text="@string/join_existing"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@android:drawable/btn_default"/>
    </LinearLayout>

</LinearLayout>